--- a/foundations/flex/02-flex-header/style.css
+++ b/foundations/flex/02-flex-header/style.css
@@ -1,25 +1,35 @@
 .header  {
   font-family: monospace;
   background: papayawhip;
+  display : flex ;
+  justify-content:  space-between;
+  align-items: center;
 }
 
 .logo {
-  font-size: 48px;
+  font-size: 15px;
   font-weight: 900;
   color: tomato;
   background: white;
-  padding: 4px 32px;
+  padding: 5px 5px;
+
 }
 
 ul {
   /* this removes the dots on the list items*/
   list-style-type: none;
+  display : flex ; 
+  gap : 5px ; 
+  padding : 5px ; 
+  
 }
 
 a {
-  font-size: 22px;
+  font-size: 15px;
   background: white;
-  padding: 8px;
+  padding: 5px;
   /* this removes the line under the links */
   text-decoration: none;
+  
 }
+
