--- a/foundations/flex/03-flex-header-2/style.css
+++ b/foundations/flex/03-flex-header-2/style.css
@@ -6,12 +6,16 @@ body {
   margin: 0;
   background: #eee;
   font-family: Besley, serif;
+  
 }
 
 .header {
   background: white;
   border-bottom: 1px solid #ddd;
   box-shadow: 0 0 8px rgba(0,0,0,.1);
+  display : flex ; 
+  justify-content: space-between;
+  align-content : center; 
 }
 
 .profile-image {
@@ -30,11 +34,12 @@ body {
 }
 
 button {
-  border: none;
-  border-radius: 8px;
+  border: 15px solid white;
+  border-radius: 20px;
   background: rebeccapurple;
   color: white;
-  padding: 8px 24px;
+  padding: 8px 32px;
+  box-sizing: border-box
 }
 
 a {
@@ -45,4 +50,22 @@ a {
 
 ul {
   list-style-type: none;
+  display : flex ; 
+  gap : 10px ; 
+  padding : 0px ; 
+ 
+}
+
+.left {
+  display:flex ;
+  gap: 20px ;
+  align-items: center;
+  margin: 0px 10px; 
+}
+
+.right {
+  display:flex ;
+  gap: 20px ;
+  align-items: center;
+  margin: 0px 10px; 
 }
