--- a/foundations/flex/04-flex-information/style.css
+++ b/foundations/flex/04-flex-information/style.css
@@ -24,3 +24,27 @@ img {
   justify-content: center;
   background: #eee;
 }
+
+/* Answer is as follows  */
+
+.content {
+  display:flex ;
+  margin : 30px 30px ; 
+  gap : 40px ;
+}
+
+.title {
+  display:flex ;
+  justify-content: center;
+}
+
+.first, 
+.second,
+.third,
+.fourth {
+  display: flex ; 
+  flex-wrap ; wrap ; 
+  flex-direction: column;
+  align-items : center ; 
+  text-align: center ;
+}
