--- a/foundations/flex/05-flex-modal/style.css
+++ b/foundations/flex/05-flex-modal/style.css
@@ -67,3 +67,30 @@ button.cancel {
   border: 1px solid #ddd;
   color: royalblue;
 }
+
+/* Answer below this */
+.modal {
+  display : flex ; 
+  gap : 20px ; 
+  padding : 10px ; 
+  }
+
+.icon {
+  flex-shrink : 1 ; 
+}
+
+.middle { 
+  flex-shrink: 1000 ;
+  display : flex ; 
+  flex-direction: column ;
+  gap: 10px ; 
+}
+
+.close-button { 
+  flex-direction: 1 ;
+}
+
+.header {
+  font-size: 20px;
+  font-weight: 900;
+}
